--- a/Home/detail.css
+++ b/Home/detail.css
@@ -1,89 +1,109 @@
-*{
-    margin: 0;
-    
-    padding: 0;
+* {
+  margin: 0;
+
+  padding: 0;
 
 }
-.header{
-    padding-left: 70px;
-    display: flex;
-    gap:40px;
-    align-items: center;
-    border-bottom: 1px solid #3c3a3a;
-    position: relative;
+
+.header {
+  padding-left: 70px;
+  display: flex;
+  gap: 40px;
+  align-items: center;
+  border-bottom: 1px solid #3c3a3a;
+
 }
-.header  img{
-    width: 30px;
-    height: 30px;
-   
+
+.header img {
+  width: 30px;
+  height: 30px;
+
 }
-.header a{
-    text-decoration: none;
-    padding:5px;
-    color:rgb(121, 113, 113);
+
+.header a {
+  text-decoration: none;
+  padding: 5px;
+  color: rgb(121, 113, 113);
 }
-.social{
-    display:flex;
-    align-items:center;
-    gap:15px;
-    font-size: 20px;
+
+.social {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: 20px;
 }
+
 .social-icons {
- padding-left: 550px;
+  padding-left: 550px;
 
 }
-.social-icons a{
-    padding: 8px;
+
+.social-icons a {
+  padding: 8px;
 }
-.social-icons a:hover{
-    color: orangered;
-    cursor: pointer;
-    
+
+.social-icons a:hover {
+  color: orangered;
+  cursor: pointer;
+
 }
+
+.villa-house {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: white;
+}
+
 .navbar {
-    width: 100%;
-    height: 100px;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    gap: 15%;
-    position:absolute;
-  
- 
-    
+  width: 100%;
+  height: 100px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  gap: 15%;
+
+
+
+
 }
 
 .villa {
- padding: 20px 20px 20px 60px;
- font-size: x-large;
+  padding: 20px 20px 20px 60px;
+  font-size: x-large;
 
 }
 
 .navlinks {
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
-    text-align: center;
-    align-items: center;
-    font-size: larger;
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  text-align: center;
+  align-items: center;
+  font-size: larger;
 }
-.navlinks a{
-    text-decoration: none;
-    color: rgb(26, 25, 25);
+
+.navlinks a {
+  text-decoration: none;
+  color: rgb(26, 25, 25);
 }
-.navlinks .detail{
-    color:  #e74c3c;
+
+.navlinks .detail {
+  color: #e74c3c;
 }
-.navlinks a:hover{
-    color: orangered;
-    cursor: pointer;
+
+.navlinks a:hover {
+  color: orangered;
+  cursor: pointer;
 }
-.button{
-   margin-top: 20px;
-   padding-right:20px;
+
+.button {
+  margin-top: 20px;
+  padding-right: 20px;
 
 }
+
 .custom-btn {
-  display:flex;
+  display: flex;
   align-items: center;
   background-color: #000;
   color: #fff;
@@ -114,55 +134,65 @@
 .custom-btn .icon i {
   font-size: 14px;
 }
-.text:hover{
-    color:orangered;
-    cursor: pointer;
+
+.text:hover {
+  color: orangered;
+  cursor: pointer;
 }
-.banner{
-    background: url(./Assests/page-heading-bg.jpg);
-    height: 300px;
-    width: 100%;
+
+.banner {
+  background: url(./Assests/page-heading-bg.jpg);
+  height: 300px;
+  width: 100%;
 }
-.main-bar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.main-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.box{
-    width: 350px;
-    height: 30px;
-    background-color: #fff;
+
+.box {
+  width: 350px;
+  height: 30px;
+  background-color: #fff;
 }
-.props{
-    color: #080808;
-    padding: 2px 10px;
+
+.props {
+  color: #080808;
+  padding: 2px 10px;
 }
-.box h2{
-    font-size: xx-large;
-    color: #fff;
-    padding-top: 20px;
-    padding-left: 30px;
+
+.box h2 {
+  font-size: xx-large;
+  color: #fff;
+  padding-top: 20px;
+  padding-left: 30px;
 }
-.types{
-    display: flex;
-    padding-left: 360px;
-    gap: 30px;
-    margin: 30px 0px ;
-    
-    
+
+.types {
+  display: flex;
+  padding-left: 360px;
+  gap: 30px;
+  margin: 30px 0px;
+
+
 }
-.types a{
-    text-decoration: none;
-    color: #fff;
-    background-color: #080808;
-    padding: 10px 20px;
-    border-radius: 10px;
+
+.types a {
+  text-decoration: none;
+  color: #fff;
+  background-color: #080808;
+  padding: 10px 20px;
+  border-radius: 10px;
 }
-.types a:hover{
-    cursor: pointer;
-    color: orangered;
-    transition: 0.2s;
+
+.types a:hover {
+  cursor: pointer;
+  color: orangered;
+  transition: 0.2s;
 }
+
 .main-section {
   display: flex;
   gap: 30px;
@@ -177,6 +207,7 @@
   width: 700px;
   height: 400px;
 }
+
 .right-content {
   width: 240px;
   background: #ffffff;
@@ -213,6 +244,7 @@
   width: 40px;
   height: 40px;
 }
+
 .property-section {
   font-family: 'Segoe UI', sans-serif;
   color: #333;
@@ -287,6 +319,7 @@
   border-top: 1px solid #ddd;
   font-weight: 500;
 }
+
 .deal-section {
   padding: 80px 40px;
   max-width: 1400px;
@@ -307,7 +340,7 @@
 .filter-buttons {
   display: flex;
   gap: 15px;
-  
+
   margin-bottom: 40px;
   margin-left: 750px;
 }
@@ -329,8 +362,8 @@
 }
 
 .filter-buttons button:hover {
-cursor: pointer;
-background-color: orangered;
+  cursor: pointer;
+  background-color: orangered;
 }
 
 .deal-content {
@@ -404,16 +437,112 @@ background-color: orangered;
   align-items: center;
   gap: 10px;
 }
+
 footer {
   background: #111;
   color: #aaa;
   text-align: center;
   padding: 20px;
   font-size: 14px;
- 
+
 }
 
 .footer a {
   color: #ccc;
   text-decoration: none;
+}
+
+
+@media (max-width: 1500px) {
+  .header {
+    padding-left: 30px;
+    gap: 20px;
+  }
+
+  .social-icons {
+    padding-left: 500px;
+  }
+
+  .navbar {
+    gap: 18%;
+    flex-wrap: wrap;
+    height: 100px;
+    padding: 0px 0px;
+  }
+
+  .navlinks {
+    gap: 25px;
+    font-size: 16px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px 0;
+  }
+
+  .villa h1 {
+    font-size: xx-large;
+    padding: 20px 20px 20px 40px;
+
+  }
+
+
+  .button {
+    margin-top: 10px;
+    padding-right: 10px;
+  }
+
+  .custom-btn {
+    font-size: 13px;
+    padding: 8px 14px;
+  }
+
+  .types {
+    padding-left: 120px;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .main-section {
+    margin: 40px 60px;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .left-content img {
+    width: 90%;
+    height: auto;
+  }
+
+  .right-content {
+    width: 300px;
+    padding: 30px;
+  }
+
+  .filter-buttons {
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .deal-section {
+    padding: 60px 20px;
+  }
+
+  .deal-content {
+    gap: 20px;
+    justify-content: center;
+  }
+
+  .deal-info {
+    padding: 20px;
+  }
+
+  .deal-description {
+    padding: 10px 0;
+  }
+
+  footer {
+    padding: 15px;
+  }
 }
